...
                if (nameAttendee.isEmpty()) {
                  "Name cannot be empty"
                } else {
                  null
                }
              },
              testTag = "nameTextFieldUser",
              errorTestTag = "nameErrorUser")

          Spacer(modifier = Modifier.padding(SMALL_PADDING.dp))
          TextFieldWithErrorState(
              modifier = Modifier.fillMaxWidth(WIDTH_FRACTION_SM),
              value = surname,
              onValueChange = { surname = it },
              label = "Surname",
              validation = { null },
              testTag = "surnameTextFieldUser",
              errorTestTag = "surnameErrorUser")
          TextButton(
              modifier =
                  Modifier.testTag("addUserButton").fillMaxWidth().padding(MEDIUM_PADDING.dp),
              onClick = {
                onAddUser(
                    User(
                        name = name,
                        surname = surname,
                        id = "",
...
