...
                        shape = RoundedCornerShape(size = MEDIUM_PADDING.dp))
                    .verticalScroll(rememberScrollState())
                    .testTag("FilterDialog"),
            verticalArrangement = Arrangement.Center,
            horizontalAlignment = Alignment.CenterHorizontally,
...
              horizontalAlignment = Alignment.CenterHorizontally) {
                Text(
                    text = "Price Range",
                    modifier =
                        Modifier.padding(bottom = STANDARD_PADDING.dp).testTag("priceRangeLabel"))
...
                    onValueChange = { newMaxPrice -> maxPrice = newMaxPrice },
                    valueRange = 0f..DEFAULT_MAX_PRICE, // Total range of the slider
                    modifier = Modifier.testTag("priceRangeSlider"),
                    colors =
                        SliderDefaults.colors(
...
                    label = { Text("Members Available") },
                    singleLine = true,
                    modifier = Modifier.testTag("membersAvailableTextField"),
                    shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp))

...
                        Modifier.fillMaxWidth(WIDTH_FRACTION_SM)
                            .padding(STANDARD_PADDING.dp)
                            .testTag("minDateTextField"),
                    colors =
                        ButtonDefaults.buttonColors(
...
                        Modifier.fillMaxWidth(WIDTH_FRACTION_SM)
                            .padding(STANDARD_PADDING.dp)
                            .testTag("maxDateTextField"),
                    colors =
                        ButtonDefaults.buttonColors(
...
                        Modifier.fillMaxWidth(WIDTH_FRACTION_SM)
                            .padding(STANDARD_PADDING.dp)
                            .testTag("startTimeTextField"),
                    colors =
                        ButtonDefaults.buttonColors(
...
                        Modifier.fillMaxWidth(WIDTH_FRACTION_SM)
                            .padding(STANDARD_PADDING.dp)
                            .testTag("endTimeTextField"),
                    colors =
                        ButtonDefaults.buttonColors(
...
                    onValueChange = { distance = it },
                    label = { Text("distance") },
                    modifier = Modifier.testTag("distanceTextField"),
                    placeholder = { Text(text = "exp: 10.5 km") },
                    singleLine = true,
...
                Row(horizontalArrangement = Arrangement.End, modifier = Modifier.fillMaxWidth()) {
                  TextButton(
                      onClick = { onDismiss() }, modifier = Modifier.testTag("cancelButton")) {
                        Text("Cancel")
                      }

...
                      shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
                      colors = ButtonDefaults.buttonColors(containerColor = Color(MAIN_COLOR_DARK)),
                      modifier = Modifier.testTag("filterButton")) {
                        Text("Filter")
                      }
                }
...
  Row(
      verticalAlignment = Alignment.CenterVertically,
      modifier = Modifier.fillMaxWidth().testTag("PROSection")) {
        androidx.compose.material3.IconButton(
            modifier = Modifier.testTag("infoIconButton"), onClick = { showDialog = true }) {
              Icon(
                  painter = painterResource(id = android.R.drawable.ic_dialog_info),
...
            text = "PRO info",
            style = androidx.compose.material3.MaterialTheme.typography.bodyMedium,
            modifier = Modifier.padding(end = SMALL_PADDING.dp).testTag("PROInfo"))
      }

  if (showDialog) {
    androidx.compose.material3.AlertDialog(
        modifier = Modifier.testTag("PROInfoDialog"),
        onDismissRequest = { showDialog = false },
        confirmButton = {
          androidx.compose.material3.TextButton(
              modifier = Modifier.testTag("okButton"), onClick = { showDialog = false }) {
                Text(text = stringResource(id = R.string.ok), color = Color(MAIN_COLOR_DARK))
              }
...
        title = {
          Text(
              modifier = Modifier.testTag("PROInfoTitle"),
              text = stringResource(id = R.string.PRO_info))
        },
        text = {
          Text(
              modifier = Modifier.testTag("PROInfoText"),
              text = stringResource(id = R.string.PRO_explanation))
        })
...
